# wasm-space-program

./: .gitignore  CNAME  LICENSE  README.md  agg.sql  dev_notes.md  functions.sql  index.html  run_turns.sh  run_updates.sh  schema.sql  scratch.sql  turn.sh  v2.sql  vector.sql
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yaml
agent/: Cargo.toml  agent.wit  interface.wit
agent/src/: agent.rs  cell.rs  command.rs  entity.rs  interface.rs  lib.rs  plan.rs  point.rs  strategy.rs  system.rs
assets/: index.2260ad17.js  index.39eeea2d.js  index.4e82fc73.js  index.5918670b.js  index.660120db.js  index.74fe961a.js  index.7e87e930.js  index.87c2c33b.js  index.9ab13f8e.css  index.b46be23e.js  index.b479df4f.js  index.b51d8ea4.css  index.b80365ff.js  index.bbdef028.js  index.bfc530dd.js  index.c54ab428.js  index.d25737e7.js  index.eee05418.js  index.f8908c14.js
backend/: .gitignore  backend.go  config.example.toml  fly.toml  go.mod  go.sum  main.go
backend/api/: server.go
backend/config/: config.go
backend/game/: database.go  worker.go
web/: .env.development  .env.production  .eslintrc  index.html  package.json  tsconfig.json  vite.config.ts
web/assets/sprites/: spritesheet.json
web/src/: main.tsx  theme.ts
web/src/components/: App.tsx  AssetLoader.tsx  AssetSprite.tsx  Battle.tsx  DebugGrid.tsx  DebugOnly.tsx  DebugPlayground.tsx  Entity.tsx  EntitySpawner.tsx  EntityTracker.tsx  ErrorOverlay.tsx  Explosion.tsx  GlobalInfo.tsx  InfoModal.tsx  InfoOverlay.tsx  MarkdownText.tsx  Minimap.tsx  PixiLoader.tsx  Router.tsx  SpriteGrid.tsx  (+9 more)
(+11 files in other folders)
