[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }
bytes-cast = "0.2.0"
bit-struct = "0.1.31"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"

[lib]
crate-type = ["cdylib"]
