[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
# we are not using components (only wit)
# some Wasm tools expect this section

[dependencies]
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "60e3c5b41e616fee239304d92128e117dd9be0a7" }
bytes-cast = "0.2.0"
bit-struct = "0.1.31"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"

[lib]
crate-type = ["cdylib"]
